--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "nicodmf/highlight-bundle",
+  "name": "webeith/highlight-bundle",
   "description": "This bundle transforms a part of text representing a source code in html formated text, providing 5 highlighter: pygment, geshi, highlight, http request to appspot, http request to hiliteme",
   "keywords": ["highligh", "code", "pygment", "geshi", "highlight"],
   "type": "symfony-bundle",
@@ -11,13 +11,13 @@
   ],
   "require": {
     "php":               ">=5.3.2",
-    "symfony/symfony":   "2.2.*",
+    "symfony/symfony":   "*",
     "twig/extensions":   "*",
 
-    "symfony/assetic-bundle":  "2.*"
+    "symfony/assetic-bundle":  "*"
 
   },
-  
+
   "autoload": {
       "psr-0": { "Highlight": "" }
   },
