--- a/composer.json
+++ b/composer.json
@@ -11,15 +11,20 @@
   ],
   "require": {
     "php":               ">=5.3.2",
-    "symfony/symfony":   "2.3.*",
+    "symfony/symfony":   ">=2.2.*",
     "twig/extensions":   "*",
 
-    "symfony/assetic-bundle":  "2.3.*"
+    "symfony/assetic-bundle":  ">=2.*"
 
   },
 
   "autoload": {
       "psr-0": { "Highlight": "" }
   },
-  "target-dir" : "Highlight"
+  "target-dir" : "Highlight",
+  "extra": {
+    "branch-alias": {
+        "dev-master": "2.2.x"
+     }
+  }
 }
