--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,6 @@
   "autoload": {
       "psr-0": { "Highlight": "" }
   },
-  "target-dir" : "Highlight",
-  "extra": {
-    "branch-alias": {
-        "dev-master": "2.2.x"
-     }
-  }
+  "target-dir" : "Highlight"
+
 }
