--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,10 @@
   ],
   "require": {
     "php":               ">=5.3.2",
-    "symfony/symfony":   ">=2.2.*",
+    "symfony/symfony":   "2.3.*",
     "twig/extensions":   "*",
 
-    "symfony/assetic-bundle":  ">=2.*"
+    "symfony/assetic-bundle":  "2.*"
 
   },
 
