--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
   ],
   "require": {
     "php":               ">=5.3.2",
-    "symfony/symfony":   "2.3.*",
+    "symfony/symfony":   ">=2.3.*",
     "twig/extensions":   "*",
 
     "symfony/assetic-bundle":  "2.*"
